# PaddleOCR

./: .gitignore  requirements.txt  test.py  train.sh
benchmark/: main.py
benchmark/configs/: plate.yaml  pre_trained.yaml
benchmark/modules/configs/: config.py  paddle_recognizer_config.py
benchmark/modules/recognizer/: paddle_recognizer.py  rec_object.py
configs/rec/: plate_rec.yml
debug/: workerlog.7
deploy/tensorrt/: CMakeLists.txt  crnn.cpp  deep_text.cpp  filename.txt  gen.sh  paddle.cpp  paddle_ocr.cpp  test.py
ppocr/modeling/backbones/: __init__.py
scripts/: attach.sh  convert_2_onnx.sh  export_model.sh  inference.sh
tools/: export_model.py  train.py
tools/infer/: benchmark_rec.py  predict_det.py  predict_rec.py  utility.py
